--- a/dashboard/todo
+++ b/dashboard/todo
@@ -2,14 +2,16 @@
 [OK] criar diagrama
 [OK] limpeza frontend
 
-[] criar landing page para redirecionar para login
+[OK] criar landing page para redirecionar para login
 
 [] frontend mockados
     [] monitoramento
     [] imoveis 
     [] financeiro
     [] operacional
-    [] admin ? 
+    [] admin da uma maquiada
+
+[] resolver erros de hidratacao
 
 [] remover mocks e criar backend
 [] banco supabase
