--- a/dashboard/todo
+++ b/dashboard/todo
@@ -5,12 +5,13 @@
 [OK] criar landing page para redirecionar para login
 
 [] frontend mockados
-    [] monitoramento
+    [OK] monitoramento
     [OK] imoveis 
-    [] financeiro
+    [OK] financeiro
     [OK] operacional
     [OK] admin 
 
+[] revisao 
 [] resolver erros de hidratacao
 
 [...] remover mocks e criar backend
