--- a/dashboard/todo
+++ b/dashboard/todo
@@ -4,19 +4,18 @@
 
 [OK] criar landing page para redirecionar para login
 
-[] frontend mockados
+[OK] frontend mockados
     [OK] monitoramento: visao historica - OK / Visao geral e alertas? 
     [OK] imoveis 
-    [] financeiro
+    [OK] financeiro
     [OK] operacional -> admin django
 
 
-[] revisao 
-[] tauri demo? 
+[OK] revisao 
+[] tauri -> Capacitor 
 
-[] resolver erros de hidratacao - landing page
 [.] remover mocks e criar backend com sqlite 
-
+[] resolver erros de hidratacao - landing page
 
 [] teste integrado
 [] entrega de SAAS
